# quicpro_async

./: .gitignore  .gitmodules  404.html  CONTRIBUTE.md  CONTRIBUTING.md  Dockerfile  EXAMPLES.md  LICENSE  Makefile  README.md  ROADMAP.md  build.sh  channel.xml  config.m4  docker-compose.yml  index.html  package.xml  packages.xml  php8.3.fiber.md  php_quicpro.h  quicpro_async.php  scan.sh
.github/workflows/: release.yml
benchmarks/: CurlComparisonTest.php  LargeDataTransferTest.php
docs/: AI_EXAMPLES.md  AI_MODEL_TRAINING.md  ASYNC.md  BUILD.md  CODING_AGENT.md  ERROR_AND_EXCEPTION_REFERENCE.md  EXAMPLES.md  SERVER.md  TESTING.md  TICKET_RESUMPTION_MULTIWORKER.md  WORKFLOW_ORCHESTRATION_EXPERT_MODE_EXAMPLE.md  WORKFLOW_ORCHESTRATION_LOW_CONFIG_EXAMPLE.md  connect.md  error_and_exception_reference.md  php.ini
docs/config/: config_object_reference.md  php.ini.config.md
examples/: easy_graqphrag_enriched_workflow.php  easy_workflow_with_native_ai_functionality.php  high_frequency_trading.php  jit_protobuff_zero-copy_quic_htf.php
examples/AI_WORKFLOWS/: summarize_and_store.php
examples/CLUSTER/: advanced_cluster.php  simple_worker.php
examples/CODING_ASSISTANT/: autocoder_with_HiTL_via_websocket.php
examples/CRUD/: crud_agent.php
examples/PIPELINE_ORCHESTRATOR/: advanced_orchestrator.php  autocoder_easymode_with_intelligent_intern.php  bootstrap_for_easy_graphrag_enriched_workflow.php  simple_orchestrator.php
extension/: Makefile  Makefile.objects  config.h  config.h.in  config.m4  config.nice  config.status  config.w32  configure  libtool  package.xml  php_quicpro.h
extension-windows/: config.w32
extension/autom4te.cache/: output.0  output.1  requests  traces.1
extension/include/: cancel.h  cluster.h  cluster_opts.h  config.h  cors.h  iibin.h  mcp.h  php_quicpro.h  php_quicpro_arginfo.h  pipeline_orchestrator.h  poll.h  proto.h  quicpro_globals.h  quicpro_ini.h  quicpro_init.h  session.h  tls.h  websocket.h
extension/src/: Makefile.am  cancel.c  cancel.dep  cluster.c  config.c  connect.c  http3.c  http3.dep  iibin.c  iibin_api.c  iibin_decoding.c  iibin_registry.c  mcp.c  php_quicpro.c  php_quicpro.dep  php_quicpro_arginfo.h  pipeline_orchestrator.c  poll.c  poll.dep  quicpro_globals.c  quicpro_ini.c  quicpro_init.c  session.c  session.dep  tls.c  tls.dep  tool_handler_registry.c
extension/src/client/: http1.c  http2.c  http3.c  session.c  tls.c
extension/src/config/: config.c  quicpro_ini.c
extension/src/config/app_http3_websockets_webtransport/: base_layer.c  config.c  default.c  index.c  ini.c
extension/src/config/bare_metal_tuning/: base_layer.c  config.c  default.c  index.c  ini.c
extension/src/config/cloud_autoscale/: base_layer.c  config.c  default.c  index.c  ini.c
extension/src/config/cluster_and_process/: base_layer.c  config.c  default.c  index.c  ini.c
extension/src/config/dynamic_admin_api/: base_layer.c  config.c  default.c  index.c  ini.c
extension/src/config/high_perf_compute_and_ai/: base_layer.c  config.c  default.c  index.c  ini.c
extension/src/config/http2/: base_layer.c  config.c  default.c  default.h  index.c  ini.c
extension/src/config/iibin/: base_layer.c  config.c  default.c  index.c  ini.c
extension/src/config/mcp_and_orchestrator/: base_layer.c  config.c  default.c  index.c  ini.c
extension/src/config/native_cdn/: base_layer.c  config.c  default.c  index.c  ini.c
extension/src/config/native_object_store/: base_layer.c  config.c  default.c  index.c  ini.c
extension/src/config/open_telemetry/: base_layer.c  config.c  default.c  index.c  ini.c
extension/src/config/quic_transport/: base_layer.c  config.c  default.c  index.c  ini.c
extension/src/config/router_and_loadbalancer/: base_layer.c  config.c  default.c  index.c  ini.c
extension/src/config/security_and_traffic/: base_layer.c  config.c  default.c  index.c  ini.c
extension/src/config/semantic_geometry/: base_layer.c  config.c  default.c  index.c  ini.c
extension/src/config/smart_contracts/: base_layer.c  config.c  default.c  index.c  ini.c
extension/src/config/smart_dns/: base_layer.c  config.c  default.c  index.c  ini.c
extension/src/config/ssh_over_quic/: base_layer.c  config.c  default.c  index.c  ini.c
extension/src/config/state_management/: base_layer.c  config.c  default.c  index.c  ini.c
extension/src/config/tcp_transport/: base_layer.c  config.c  default.c  index.c  ini.c
extension/src/config/tls_and_crypto/: base_layer.c  config.c  default.c  index.c  ini.c
extension/src/cors/: cors.c
extension/src/http_client/: http_client.c
extension/src/iibin/: iibin_encoding.c  iibin_schema.c
extension/src/server/: admin_api.c  cancel.c  cors.c  early_hints.c  http1.c  http2.c  http3.c  index.c  websocket.c
extension/src/session/: session.c
extension/src/validation/config_param/: validate_bool.c  validate_colon_separated_string_from_allowlist.c  validate_comma_separated_numeric_string.c  validate_comma_separated_string_from_allowlist.c  validate_cors_origin_string.c  validate_cpu_affinity_map_string.c  validate_double_range.c  validate_erasure_coding_shards_string.c  validate_generic_string.c  validate_host_string.c  validate_long_range.c  validate_niceness_value.c  validate_non_negative_long.c  validate_positive_long.c  validate_readable_file_path.c  validate_scale_up_policy_string.c  validate_scheduler_policy.c  validate_string.c  validate_string_from_allowlist.c
infra/demo-server/: Dockerfile
infra/makescripts/: prepare.sh
infra/php81/: Dockerfile
infra/php82/: Dockerfile
infra/php83/: Dockerfile
infra/php84/: Dockerfile
infra/scripts/: build.sh  container-utils.sh  help.sh  install-docker.sh  run-benchmark.sh  run-deploy-test.sh  run-fuzz.sh  run-tests-matrix.sh  run-tests-php81.sh  run-tests-php82.sh  run-tests-php83.sh  run-tests-php84.sh  unit.sh  utils.sh
infra/traefik/: traefik.yml
infra/tshark/: Dockerfile
rest/p/: packages.xml
src/: cancel.c  config.c  connect.c  http3.c  php_quicpro.c  php_quicpro_arginfo.h  poll.c  session.c  tls.c
stubs/: quicpro_async.php
tests/: 001_smoke.phpt
(+218 files in other folders)
