PHP_EXTENSION = quicpro_async

PHP_EXTENSION_SOURCES = \
    cancel.c \
    cluster.c \
    config.c \
    connect.c \
    http3.c \
    iibin.c \
    iibin_decoding.c \
    iibin_encoding.c \
    iibin_schema.c \
    mcp.c \
    php_quicpro.c \
    pipeline_orchestrator.c \
    poll.c \
    quicpro_ini.c \
    session.c \
    tls.c \
    tool_handler_registry.c \
    websocket.c \
    cors/cors.c \
    config/http2/default.c \
    config/http2/ini.c \
    config/http2/index.c \
    config/http2/base_layer.c \
    config/http2/config.c \
    config/bare_metal_tuning/default.c \
    config/bare_metal_tuning/ini.c \
    config/bare_metal_tuning/index.c \
    config/bare_metal_tuning/base_layer.c \
    config/bare_metal_tuning/config.c \
    config/smart_contracts/default.c \
    config/smart_contracts/ini.c \
    config/smart_contracts/index.c \
    config/smart_contracts/base_layer.c \
    config/smart_contracts/config.c \
    config/quic_transport/default.c \
    config/quic_transport/ini.c \
    config/quic_transport/index.c \
    config/quic_transport/base_layer.c \
    config/quic_transport/config.c \
    config/tls_and_crypto/default.c \
    config/tls_and_crypto/ini.c \
    config/tls_and_crypto/index.c \
    config/tls_and_crypto/default.h \
    config/tls_and_crypto/base_layer.c \
    config/tls_and_crypto/config.c \
    config/native_cdn/default.c \
    config/native_cdn/ini.c \
    config/native_cdn/index.c \
    config/native_cdn/default.h \
    config/native_cdn/base_layer.c \
    config/native_cdn/config.c \
    config/open_telemetry/default.c \
    config/open_telemetry/ini.c \
    config/open_telemetry/index.c \
    config/open_telemetry/default.h \
    config/open_telemetry/base_layer.c \
    config/open_telemetry/config.c \
    config/iibin/default.c \
    config/iibin/ini.c \
    config/iibin/index.c \
    config/iibin/base_layer.c \
    config/iibin/config.c \
    config/security_and_traffic/default.c \
    config/security_and_traffic/ini.c \
    config/security_and_traffic/index.c \
    config/security_and_traffic/base_layer.c \
    config/security_and_traffic/config.c \
    config/cloud_autoscale/default.c \
    config/cloud_autoscale/ini.c \
    config/cloud_autoscale/index.c \
    config/cloud_autoscale/base_layer.c \
    config/cloud_autoscale/config.c \
    config/tcp_transport/default.c \
    config/tcp_transport/ini.c \
    config/tcp_transport/index.c \
    config/tcp_transport/base_layer.c \
    config/tcp_transport/config.c \
    config/mcp_and_orchestrator/default.c \
    config/mcp_and_orchestrator/ini.c \
    config/mcp_and_orchestrator/index.c \
    config/mcp_and_orchestrator/base_layer.c \
    config/mcp_and_orchestrator/config.c \
    config/semantic_geometry/default.c \
    config/semantic_geometry/ini.c \
    config/semantic_geometry/index.c \
    config/semantic_geometry/base_layer.c \
    config/semantic_geometry/config.c \
    config/router_and_loadbalancer/default.c \
    config/router_and_loadbalancer/ini.c \
    config/router_and_loadbalancer/index.c \
    config/router_and_loadbalancer/base_layer.c \
    config/router_and_loadbalancer/config.c \
    config/cluster_and_process/default.c \
    config/cluster_and_process/ini.c \
    config/cluster_and_process/index.c \
    config/cluster_and_process/base_layer.c \
    config/cluster_and_process/config.c \
    config/dynamic_admin_api/default.c \
    config/dynamic_admin_api/ini.c \
    config/dynamic_admin_api/index.c \
    config/dynamic_admin_api/base_layer.c \
    config/dynamic_admin_api/config.c \
    config/app_http3_websockets_webtransport/default.c \
    config/app_http3_websockets_webtransport/ini.c \
    config/app_http3_websockets_webtransport/index.c \
    config/app_http3_websockets_webtransport/base_layer.c \
    config/app_http3_websockets_webtransport/config.c \
    config/high_perf_compute_and_ai/default.c \
    config/high_perf_compute_and_ai/ini.c \
    config/high_perf_compute_and_ai/index.c \
    config/high_perf_compute_and_ai/base_layer.c \
    config/high_perf_compute_and_ai/config.c \
    config/state_management/default.c \
    config/state_management/ini.c \
    config/state_management/index.c \
    config/state_management/base_layer.c \
    config/state_management/config.c \
    config/smart_dns/default.c \
    config/smart_dns/ini.c \
    config/smart_dns/index.c \
    config/smart_dns/base_layer.c \
    config/smart_dns/config.c \
    config/native_object_store/default.c \
    config/native_object_store/ini.c \
    config/native_object_store/index.c \
    config/native_object_store/base_layer.c \
    config/native_object_store/config.c \
    config/ssh_over_quic/default.c \
    config/ssh_over_quic/ini.c \
    config/ssh_over_quic/index.c \
    config/ssh_over_quic/base_layer.c \
    config/ssh_over_quic/config.c \
    src/validation/config_param/validate_bool.c \
    src/validation/config_param/validate_positive_long.c \
    src/validation/config_param/validate_host_string.c \
    src/validation/config_param/validate_erasure_coding_shards_string.c \
    src/validation/config_param/validate_string_from_allowlist.c \
    src/validation/config_param/validate_cpu_affinity_map_string.c \
    src/validation/config_param/validate_comma_separated_string_from_allowlist.c \
    src/validation/config_param/validate_readable_file_path.c \
    src/validation/config_param/validate_double_range.c \
    src/validation/config_param/validate_colon_separated_string_from_allowlist.c \
    src/validation/config_param/validate_generic_string.c \
    src/validation/config_param/validate_scale_up_policy_string.c \
    src/validation/config_param/validate_cors_origin_string.c \
    src/validation/config_param/validate_string.c \
    src/validation/config_param/validate_scheduler_policy.c \
    src/validation/config_param/validate_long_range.c \
    src/validation/config_param/validate_niceness_value.c \
    src/validation/config_param/validate_comma_separated_numeric_string.c \
    src/validation/config_param/validate_non_negative_long.c

PHP_EXTENSION_LDFLAGS = -L$(QUICPRO_ASYNC_LIB) -lquiche -lssl -lcrypto -lcurl
PHP_EXTENSION_CFLAGS = -I$(QUICPRO_ASYNC_INCLUDE) -I$(top_srcdir)/libcurl/include

include $(top_srcdir)/ext/standard/standard.mk